--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -16,9 +16,7 @@
   </head>
 
   <body class="min-h-screen flex">
-    <div>{% include 'sidebar.html' %}
-          {% include 'mobileSidebar.html' %}
-    </div>
+    <div>{% include 'sidebar.html' %} {% include 'mobileSidebar.html' %}</div>
 
     <div class="flex-1 flex flex-col p-4">
       {% include 'topbar.html' %}
@@ -27,33 +25,30 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"
-    ></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"></script>
     <script>
-  window.translations = {
-    // General translations
-    "Jan": "{{ _('Jan') }}",
-    "Feb": "{{ _('Feb') }}",
-    "Mar": "{{ _('Mar') }}",
-    "Apr": "{{ _('Apr') }}",
-    "May": "{{ _('May') }}",
-    "Jun": "{{ _('Jun') }}",
-    "Income": "{{ _('Income') }}",
-    "Expenses": "{{ _('Expenses') }}",
-    "Profit": "{{ _('Profit') }}",
-    "Mondat": "{{ _('Monday') }}",
-    "Tuesday": "{{ _('Tuesday') }}",
-    "Wednesday": "{{ _('Wednesday') }}",
-    "Thursday": "{{ _('Thursday') }}",
-    "Friday": "{{ _('Friday') }}",
-  };
-  
-  function __(key) {
-    return window.translations[key] || key;
-  }
-</script>
+      window.translations = {
+        // General translations
+        Jan: "{{ _('Jan') }}",
+        Feb: "{{ _('Feb') }}",
+        Mar: "{{ _('Mar') }}",
+        Apr: "{{ _('Apr') }}",
+        May: "{{ _('May') }}",
+        Jun: "{{ _('Jun') }}",
+        Income: "{{ _('Income') }}",
+        Expenses: "{{ _('Expenses') }}",
+        Profit: "{{ _('Profit') }}",
+        Monday: "{{ _('Monday') }}",
+        Tuesday: "{{ _('Tuesday') }}",
+        Wednesday: "{{ _('Wednesday') }}",
+        Thursday: "{{ _('Thursday') }}",
+        Friday: "{{ _('Friday') }}",
+      };
+
+      function __(key) {
+        return window.translations[key] || key;
+      }
+    </script>
 
     {% block scripts %} {% endblock %}
   </body>
